add_executable(FIFOComputationSchedPolicyTest FIFOComputationSchedulePolicyTest.cpp)
add_executable(RRComputationSchedPolicyTest RRComputationSchedulePolicyTest.cpp)
add_executable(nodeManagerTest NodeManagerTest.cpp)
add_executable(managerLinkUnorderMapTest ManagerLinkUnorderMapTest.cpp)
add_executable(tcpLinkTest TCPLinkTest.cpp)
add_executable(FIFODiskIOSchedulePolicyTest FIFODiskIOSchedulePolicyTest.cpp)
add_executable(AccountNodeInfoTest AccountNodeInfoTest.cpp)
add_executable(AccountTaskInfoTest AccountTaskInfoTest.cpp)

target_link_libraries(FIFOComputationSchedPolicyTest Engine Entity gtest pthread)
target_link_libraries(RRComputationSchedPolicyTest Engine Entity gtest pthread)
target_link_libraries(nodeManagerTest Entity Engine gtest pthread)
target_link_libraries(managerLinkUnorderMapTest Entity Engine gtest pthread)
target_link_libraries(tcpLinkTest Engine Entity gtest pthread)
target_link_libraries(FIFODiskIOSchedulePolicyTest Entity Engine gtest pthread)
target_link_libraries(AccountNodeInfoTest ConfigAnalyse Entity Engine gtest pthread test)
target_link_libraries(AccountTaskInfoTest Entity gtest pthread)